--- a/age2.html
+++ b/age2.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<title>📋 محلل الرقم القومي المصري</title>
+<title>📋 </title>
 <script src="https://docs.opencv.org/4.8.0/opencv.js"></script>
 <script src="https://unpkg.com/tesseract.js@4.1.1/dist/tesseract.min.js"></script>
 <style>
