--- a/age2.html
+++ b/age2.html
@@ -15,12 +15,12 @@ canvas,img { max-width:100%; margin-top:10px; border:1px solid #ccc; }
 </head>
 <body>
 <div class="container">
-<h2>📋 محلل الرقم القومي المصري</h2>
+<h2>📋 </h2>
 
 <input type="file" id="fileInput" accept="image/*">
 <canvas id="canvas"></canvas>
 <br>
-<button onclick="cropSelection()">📍 معالجة واستخراج الرقم القومي</button>
+<button onclick="cropSelection()">📍</button>
 
 <div id="status"></div>
 <div class="result" id="result"></div>
