--- a/age2.html
+++ b/age2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🌍</title>
+    <title>🌍 محلل الرقم القومي</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;700&family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -913,8 +913,8 @@
 
     <div class="container">
         <header>
-            <h1><i class="fas fa-id-card"></i> تحليل الرقم القومي</h1>
-            <p class="subtitle"></p>
+            <h1><i class="fas fa-id-card"></i> محلل الرقم القومي  </h1>
+            <p class="subtitle">     </p>
         </header>
 
         <main class="main-grid">
@@ -980,7 +980,7 @@
     </div>
 
     <footer class="footer">
-        <p>© 2023 محلل الرقم القومي المصري الاحترافي | صمم بـ <i class="fas fa-heart"></i> بواسطة <a href="#">فريق التطوير</a></p>
+        <p>© 2025 محلل الرقم القومي المصري  <i class="fas fa-heart"></i>  <a href="#"> </a></p>
     </footer>
 
     <div class="toast" id="toast">
